# mango

./: .gitignore  LICENSE  README.md  pyproject.toml
mango/: __main__.py  config.py  download_models.py  library_models.py  models.py  theme.py
mango/render/: kitty.py
mango/services/: covers.py  downloads.py  importer.py  library.py
mango/sources/: base.py
mango/sources/mangadex/: auth.py  client.py  source.py
mango/storage/: db.py  tokens.py
mango/tui/: app.py
mango/tui/screens/: chapters.py  downloads.py  home.py  library.py  login.py  reader.py  search.py
mango/tui/widgets/: manga_card.py  search_result.py
mango/util/: rate_limiter.py
packaging/aur/: .SRCINFO  PKGBUILD
tests/: test_auth.py  test_client.py  test_db.py  test_downloads.py  test_downloads_db.py  test_downloads_screen.py  test_importer.py  test_kitty.py  test_library_service.py  test_mangadex_source.py  test_rate_limiter.py  test_theme.py  test_tokens.py
